decargar cv desde git-pages

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                     <div class="typed-text d-none">Web Designer, Web Developer, Front End Developer, Apps Designer, Apps
                         Developer</div>
                     <div class="d-flex align-items-center justify-content-center justify-content-lg-start pt-5">
-                        <a href="https://drive.google.com/file/d/1D_ZG8kUxXU4DH7Hu6BiY6ZzUvvKwNHiJ/view?usp=sharing" id="descargarLink" class="btn btn-outline-light mr-5">Descargar CV</a>
+                        <a href="/Cv/Cv Brayan.pdf" download class="btn btn-outline-light mr-5">Descargar CV</a>
                         <script src="/js/HJVida.js"></script>
                     </div>
                 </div>
