--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                     <div class="typed-text d-none">Web Designer, Web Developer, Front End Developer, Apps Designer, Apps
                         Developer</div>
                     <div class="d-flex align-items-center justify-content-center justify-content-lg-start pt-5">
-                        <a href="/Cv/Cv Brayan.pdf" download class="btn btn-outline-light mr-5">Descargar CV</a>
+                        <a href="https://github.com/StivenBsBa/BlogPersonal/blob/main/Cv/Cv%20Brayan.pdf" download class="btn btn-outline-light mr-5">Descargar CV</a>
                     </div>
                 </div>
             </div>
