--- a/index.html
+++ b/index.html
@@ -1,234 +1,15 @@
 <!DOCTYPE html>
-<html lang="es">
-
+<html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>Mi Blog</title>
-  <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <meta content="Plantillas HTML gratuitas" name="keywords">
-  <meta content="Plantillas HTML gratuitas" name="description">
-
-  <!-- Fuentes de Google -->
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap" rel="stylesheet">
-
-  <!-- Font Awesome -->
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
-
-  <!-- Hojas de estilo de las librerías -->
-  <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
-  <link href="lib/lightbox/css/lightbox.min.css" rel="stylesheet">
-
-  <!-- Hoja de estilo personalizada de Bootstrap -->
-  <link href="css/style.css" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <script>
+    window.location.href = "./html/Inicio.html";
+  </script>
 </head>
-
-<body data-spy="scroll" data-target=".navbar" data-offset="51">
-  <nav class="navbar">
-    <a href="index.html" class="logo">
-      <h1><span>Blog </span>Profesional</h1>
-    </a>
-  
-    <div class="menu-toggle">
-      <div class="bar"></div>
-      <div class="bar"></div>
-      <div class="bar"></div>
-    </div>
-    
-    <ul class="nav-links">
-      <li><a href="#">Inicio</a></li>
-      <li><a href="#AcercaDeMi">Acerca de</a></li>
-      <li><a href="#qualification">Educación & Experiencia</a></li>
-      <li><a href="#miHabilidades">Habilidad</a></li>
-      <li><a href="#Portafolio">Portafolio</a></li>
-    </ul>
-  </nav>
-  
-
-  <!-- Encabezado -->
-  <div class="header-container">
-    <div class="header-content">
-      <div>
-        <img src="img/profile.jpg" alt="Foto de perfil" class="profile-img">
-      </div>
-      <div>
-        <h3>Bienvenido a mi blog</h3>
-        <h1>Brayan Stiven Barajas Ariza</h1>
-        <div class="additional-info">
-          <div>Diseñador Web, Desarrollador Web, Desarrollador Front End, Diseñador de Aplicaciones, Desarrollador de
-            Aplicaciones</div>
-          <div>
-            <a href="./Cv/Cv Brayan.pdf" class="download-link" download>Descargar CV</a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <!-- Fin del Encabezado -->
-
-
-  <!-- Acerca de -->
-  <div class="about-container" id="AcercaDeMi">
-    <div>
-      <h1>Acerca de mí</h1>
-    </div>
-    <div class="about-content">
-      <div>
-        <img src="img/about.jpg" alt="Imagen Acerca de">
-      </div>
-      <div>
-        <h3>Diseñador UI/UX y desarrollador web</h3>
-        <p>Tempor eos dolore amet tempor dolor tempor. Dolore ea magna sit amet dolor eirmod. Eos ipsum est tempor
-          dolor. Clita lorem kasd sed ea lorem diam ea lorem eirmod duo sit ipsum. Amet dolor stet lorem diam dolor
-          justo et dolor dolor dolor</p>
-        <div>
-          <div>
-            <h6>Nombre: Brayan Stiven Barajas Ariza</h6>
-          </div>
-          <div>
-            <h6>Ocupación: Estudiante</h6>
-          </div>
-          <div>
-            <h6>Experiencia: 0 Años</h6>
-          </div>
-          <div>
-            <h6>Teléfono: +012 345 6789</h6>
-          </div>
-          <div>
-            <h6>Email: info@example.com</h6>
-          </div>
-        </div>
-        <a href="#">Más Información</a>
-      </div>
-    </div>
-  </div>
-  <!-- Fin Acerca de -->
-
-
-  <!-- Educacion y experiencia -->
-  <div class="quality-container" id="qualification">
-    <div>
-      <h1>Educación & Experiencia</h1>
-    </div>
-    <div class="education-experience">
-      <div class="education">
-        <h3>Mi Educación</h3>
-        <div class="education-list">
-          <div>
-            <i class="fas fa-graduation-cap"></i>
-            <h5>Ingeniería de Sistemas</h5>
-            <p><strong>Universidad / Carrera Profesional</strong> | <small>2021 - 2025</small></p>
-            <p><strong>Corporación Universitaria Adventista</strong> | <small>Medellín</small></p>
-            <p>Tempor eos dolore amet tempor dolor tempor. Dolore ea magna sit amet dolor eirmod. Eos ipsum est tempor
-              dolor. Clita lorem kasd sed ea lorem diam ea lorem eirmod duo sit ipsum stet lorem diam</p>
-          </div>
-          <!-- Más entradas de educación aquí -->
-        </div>
-      </div>
-      <div class="experience">
-        <h3>Mi Experiencia</h3>
-        <div class="experience-list">
-          <div>
-            <i class="fas fa-briefcase"></i>
-            <h5>Diseñador Web</h5>
-            <p><strong>Soft Company</strong> | <small>2000 - 2050</small></p>
-            <p>Tempor eos dolore amet tempor dolor tempor. Dolore ea magna sit amet dolor eirmod. Eos ipsum est tempor
-              dolor. Clita lorem kasd sed ea lorem diam ea lorem eirmod duo sit ipsum stet lorem diam</p>
-          </div>
-          <!-- Más entradas de experiencia aquí -->
-        </div>
-      </div>
-    </div>
-  </div>
-  <!-- Fin Calidad -->
-
-
-
-<!-- Certificaciones y Cursos -->
-<div class="certificates-container">
-  <div>
-    <h1>Certificaciones y Cursos</h1>
-  </div>
-  <div class="certificate-list">
-    <div>
-      <h3>Nombre del Certificado o Curso</h3>
-      <p><strong>Institución:</strong> Nombre de la Institución | <small>Año de Obtención</small></p>
-      <p>Descripción breve del certificado o curso y su relevancia.</p>
-    </div>
-    <!-- Más certificados y cursos aquí -->
-  </div>
-</div>
-<!-- Fin Certificaciones y Cursos -->
-
-
-
-
-  
-
-  <!-- Habilidades -->
-  <div class="skills-container" id="miHabilidades">
-    <div>
-      <h1>Mis Habilidades</h1>
-    </div>
-    <div class="skills-list" id="skillsList">
-      <!-- Las habilidades se generarán dinámicamente aquí -->
-    </div>
-  </div>
-  <script src="./js/skill.js"></script>
-  <!-- Fin Habilidades -->
-
-
-  <!-- Portafolio -->
-  <div class="container" id="Portafolio">
-    <h1 class="section-title">Portafolio</h1>
-
-    <!-- Primer servicio -->
-    <div class="project">
-      <div><i class="fas fa-laptop-code project-icon"></i></div>
-      <h2 class="project-title">Diseño y Desarrollo Web</h2>
-      <p class="project-description">Diseño y desarrollo de sitios web modernos y receptivos utilizando las últimas
-        tecnologías y mejores prácticas.</p>
-      <a href="#" class="read-more">Leer más</a>
-    </div>
-
-    <!-- Segundo servicio -->
-    <div class="project">
-      <div><i class="fas fa-mobile-alt project-icon"></i></div>
-      <h2 class="project-title">Diseño de Aplicaciones Móviles</h2>
-      <p class="project-description">Diseño de aplicaciones móviles atractivas y fáciles de usar para Android e iOS.</p>
-      <a href="#" class="read-more">Leer más</a>
-    </div>
-
-    <!-- Tercer servicio -->
-    <div class="project">
-      <div><i class="fas fa-palette project-icon"></i></div>
-      <h2 class="project-title">Diseño Gráfico</h2>
-      <p class="project-description">Servicios de diseño gráfico que incluyen diseño de logotipos, materiales
-        promocionales y más.</p>
-      <a href="#" class="read-more">Leer más</a>
-    </div>
-  </div>
-  <!-- Fin de Servicios -->
-
-
-  <!-- Pie de página -->
-  <footer class="footer">
-    <div class="social-links">
-      <a href="https://www.facebook.com/brayan.barajas.31/" target="_blank"><i class="fab fa-facebook-f"></i></a>
-      <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
-      <a href="https://www.instagram.com/stiven.ba/" target="_blank"><i class="fab fa-instagram"></i></a>
-      <a href="https://www.linkedin.com/in/brayan-stiven-barajas-ariza-9ab79b235/" target="_blank"><i
-          class="fab fa-linkedin-in"></i></a>
-    </div>
-
-    <div class="footer-info">
-      <p>&copy; <a href="#" class="font-weight-bold">Domain Name</a>. All Rights Reserved. Designed by <a href="https://htmlcodex.com" class="font-weight-bold">HTML Codex</a></p>
-    </div>
-  </footer>
-  
-  <!-- Footer End -->
+<body>
 
 
 </body>
-
 </html>
