--- a/html/ProjecLocalRoot.html
+++ b/html/ProjecLocalRoot.html
@@ -11,7 +11,7 @@
     
     <script>
         // Cargar el contenido del header usando JavaScript
-        fetch('./header.html')
+        fetch('./Header.html')
             .then(response => response.text())
             .then(data => {
                 document.getElementById('headerContainer').innerHTML = data;
