--- a/html/Header.html
+++ b/html/Header.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/Header.css">
+    <link rel="stylesheet" href="../css/Header&Footer.css">
 
 </head>
 
-<body >
+<body>
     <header>
 
         <nav class="navbar">
@@ -32,7 +32,7 @@
             </ul>
         </nav>
     </header>
-    
+
     <script src="../js/skill.js"></script>
 </body>
 
