informacion de la seccion de los Intereses o Pasatiempos

--- a/html/Footer.html
+++ b/html/Footer.html
@@ -26,8 +26,7 @@
         </div>
 
         <div class="footer-info">
-            <p>&copy; <a href="#" class="font-weight-bold">Domain Name</a>. All Rights Reserved. Designed by <a
-                    href="https://htmlcodex.com" class="font-weight-bold">HTML Codex</a></p>
+            <p>¡Gracias por visitar mi blog!</p>
         </div>
     </footer>
 
