--- a/html/Inicio.html
+++ b/html/Inicio.html
@@ -173,7 +173,7 @@
                 <h3>Backend</h3>
                 <div class="skillImg">
                     <span class="skillText">Node</span>
-                    <img src="../img/Node.svg" alt="">
+                    <img src="../img/node.svg" alt="">
                 </div>
                 <div class="skillImg">
                     <span class="skillText">Java</span>
@@ -217,21 +217,42 @@
 
 
     <!-- Intereses o Pasatiempos -->
-    <div class="interests-container" id="InteresesPasatiempos">
-        <h1>Intereses o Pasatiempos</h1>
-        <div class="interests-list">
-            <div class="interest">
-                <h3>Interés 1</h3>
-                <p>Descripción del primer interés o pasatiempo.</p>
-            </div>
-            <div class="interest">
-                <h3>Interés 2</h3>
-                <p>Descripción del segundo interés o pasatiempo.</p>
-            </div>
-            <!-- Agregar más intereses o pasatiempos según sea necesario -->
+<div class="interests-container" id="InteresesPasatiempos">
+    <h1>Intereses o Pasatiempos</h1>
+    <div class="interests-list">
+        <!-- Videojuegos -->
+        <div class="interest">
+            <h3>Videojuegos</h3>
+            <p>Sumergirme en mundos virtuales llenos de aventuras y desafíos me apasiona. Desde explorar vastas tierras hasta competir en emocionantes batallas, los videojuegos son una fuente inagotable de entretenimiento y diversión para mí.</p>
+        </div>
+        <!-- Anime -->
+        <div class="interest">
+            <h3>Anime</h3>
+            <p>El mundo del anime me fascina por sus historias profundas, personajes memorables y su capacidad para transmitir emociones de manera única. Desde épicas sagas de fantasía hasta conmovedoras historias de la vida cotidiana, encuentro inspiración y entretenimiento en cada serie que descubro.</p>
+        </div>
+        <!-- Lectura -->
+        <div class="interest">
+            <h3>Lectura</h3>
+            <p>Recientemente, he comenzado a explorar el mundo de la lectura y estoy descubriendo un placer sin igual en sumergirme en libros que me transportan a mundos desconocidos y me invitan a reflexionar sobre diferentes aspectos de la vida. Cada página es una nueva aventura y una oportunidad para expandir mi horizonte intelectual.</p>
+        </div>
+        <!-- Música -->
+        <div class="interest">
+            <h3>Música</h3>
+            <p>La música es una parte esencial de mi vida, ya que me acompaña en cada momento y me permite conectar con diferentes emociones y estados de ánimo. Desde melodías tranquilas que me relajan hasta ritmos enérgicos que me motivan, siempre encuentro inspiración y confort en la música.</p>
+        </div>
+        <!-- Salir a conocer lugares -->
+        <div class="interest">
+            <h3>Salir a conocer lugares</h3>
+            <p>Explorar el mundo y descubrir nuevos lugares es una de mis actividades favoritas. Ya sea caminando por senderos naturales, explorando museos o simplemente paseando por las calles de una ciudad desconocida, cada aventura me brinda nuevas experiencias y recuerdos inolvidables.</p>
+        </div>
+        <!-- Conocer nuevas personas -->
+        <div class="interest">
+            <h3>Conocer nuevas personas</h3>
+            <p>Me apasiona interactuar con personas de diferentes culturas, antecedentes y perspectivas. Cada encuentro es una oportunidad para aprender algo nuevo, compartir experiencias y establecer conexiones significativas que enriquecen mi vida personal y profesional.</p>
         </div>
     </div>
-    <!-- Fin Intereses o Pasatiempos -->
+</div>
+<!-- Fin Intereses o Pasatiempos -->
 
     <!-- Footer de página -->
     <div id="footerContainer"></div>
