--- a/html/Inicio.html
+++ b/html/Inicio.html
@@ -5,11 +5,10 @@
     <meta charset="utf-8">
     <title>Mi Blog</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
+    <link rel="icon" href="../img/userblog.jpg" type="image/x-icon">
     <!-- Fuentes de Google -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap" rel="stylesheet">
-
     <!-- Hoja de estilo personalizada de Bootstrap -->
     <link rel="stylesheet" href="../css/style.css">
 </head>
