--- a/html/ProjecLocalRoot.html
+++ b/html/ProjecLocalRoot.html
@@ -4,9 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <title>LocatRoot</title>
-
+    <link rel="icon" href="../img/userblog.jpg" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
     <link rel="stylesheet" href="../css/projectLocalRoot.css">
 
 </head>
@@ -15,7 +14,7 @@
     <!-- Encabezado -->
     <div id="headerContainer"></div>
     <a href="#" class="button">Ir a la página</a>
-
+    
     <div>
         <h1>Localroot - Explora Medellín</h1>
 
