cooreciones, se borran los certificados

--- a/html/Header.html
+++ b/html/Header.html
@@ -4,19 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/Header&Footer.css">
+    <link rel="stylesheet" href="../css/HeaderFooter.css">
 
 </head>
 
 <body>
     <header>
-
         <nav class="navbar">
             <a href="./Inicio.html" class="logo">
                 <h1><span>Blog </span>Profesional</h1>
             </a>
 
-            <div class="menu-toggle">
+            <div class="menu-toggle" aria-label="Abrir menú" aria-expanded="false">
                 <div class="bar"></div>
                 <div class="bar"></div>
                 <div class="bar"></div>
@@ -33,7 +32,6 @@
         </nav>
     </header>
 
-    <script src="../js/skill.js"></script>
 </body>
 
 </html>
