--- a/index.html
+++ b/index.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Redirección</title>
   <script>
-    window.location.href = "./html/Inicio.html";
+    // Esperar a que el DOM esté completamente cargado antes de redirigir
+    document.addEventListener("DOMContentLoaded", function () {
+      window.location.href = "./html/Inicio.html";
+    });
   </script>
 </head>
+
 <body>
-
-
+  <p>Redirigiendo a la página de inicio...</p>
 </body>
+
 </html>
