--- a/html/Footer.html
+++ b/html/Footer.html
@@ -12,14 +12,11 @@
     <!-- Pie de página -->
     <footer class="footer">
         <div class="social-links">
-            <a href="https://www.facebook.com/brayan.barajas.31/" target="_blank"><i class="fab fa-facebook-f"></i></a>
-            <a href="https://twitter.com/BRAYANS33862840" target="_blank"><i class="fab fa-twitter"></i></a>
-            <a href="https://www.instagram.com/stiven.ba/" target="_blank"><i class="fab fa-instagram"></i></a>
-            <a href="https://www.linkedin.com/in/brayan-stiven-barajas-ariza-9ab79b235/" target="_blank"><i
-                    class="fab fa-linkedin-in"></i></a>
+            <a href="https://www.linkedin.com/in/brayanstiven/" target="_blank"><img src="/img/linkedin.svg" alt=""></a>
+            <a href="https://www.instagram.com/stiven.ba/" target="_blank"><img src="/img/instagram.svg" alt=""></a>
         </div>
 
-        <div class="footer-info">
+        <div class=" footer-info">
             <p>¡Gracias por visitar mi blog!</p>
         </div>
     </footer>
