--- a/html/Inicio.html
+++ b/html/Inicio.html
@@ -256,14 +256,14 @@
     <div id="footer"></div>
     <script>
         // Cargar el header
-        fetch('/header.html')
+        fetch('./header.html')
             .then(response => response.text())
             .then(data => {
                 document.getElementById('header').innerHTML = data;
             });
 
         // Cargar el footer
-        fetch('/footer.html')
+        fetch('./footer.html')
             .then(response => response.text())
             .then(data => {
                 document.getElementById('footer').innerHTML = data;
