--- a/html/ProjecLocalRoot.html
+++ b/html/ProjecLocalRoot.html
@@ -122,14 +122,14 @@
 
     <script>
         // Cargar el header
-        fetch('/eader.html')
+        fetch('./header.html')
             .then(response => response.text())
             .then(data => {
                 document.getElementById('header').innerHTML = data;
             });
 
         // Cargar el footer
-        fetch('/footer.html')
+        fetch('./footer.html')
             .then(response => response.text())
             .then(data => {
                 document.getElementById('footer').innerHTML = data;
