--- a/html/Inicio.html
+++ b/html/Inicio.html
@@ -8,8 +8,7 @@
     <link rel="icon" href="../img/userblog.jpg" type="image/x-icon">
 
     <link rel="stylesheet" href="../css/style.css">
-    <script src="../js/skill.js" defer></script>
-    <script src="../js/header.js" defer></script>
+
 
 
 </head>
@@ -256,21 +255,22 @@
     <div id="footer"></div>
     <script>
         // Cargar el header
-        fetch('./header.html')
+        fetch('./Header.html')
             .then(response => response.text())
             .then(data => {
                 document.getElementById('header').innerHTML = data;
             });
 
         // Cargar el footer
-        fetch('./footer.html')
+        fetch('./Footer.html')
             .then(response => response.text())
             .then(data => {
                 document.getElementById('footer').innerHTML = data;
             });
     </script>
 
-
+    <script src="../js/skill.js"></script>
+    <script src="../js/header.js"></script>
 </body>
 
 </html>
