--- a/html/ProjecLocalRoot.html
+++ b/html/ProjecLocalRoot.html
@@ -7,7 +7,6 @@
     <link rel="icon" href="../img/userblog.jpg" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/projectLocalRoot.css">
-    <script src="../js/header.js" defer></script>
 
 </head>
 
@@ -122,19 +121,20 @@
 
     <script>
         // Cargar el header
-        fetch('./header.html')
+        fetch('./Header.html')
             .then(response => response.text())
             .then(data => {
                 document.getElementById('header').innerHTML = data;
             });
 
         // Cargar el footer
-        fetch('./footer.html')
+        fetch('./Footer.html')
             .then(response => response.text())
             .then(data => {
                 document.getElementById('footer').innerHTML = data;
             });
     </script>
+    <script src="../js/header.js"></script>
 
 </body>
 
